[package]
name = "NGPortUnloker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
config = "0.14.1"
env_logger = "0.11.5"
log = "0.4.22"